# KlemmUI

./: .editorconfig  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Doxyfile  KlemmUI.sln  KlemmUI.vcxproj  KlemmUI.vcxproj.filters  LICENSE  README.md  Setup.ps1  UISystem.sln  UISystem.vcxproj  UISystem.vcxproj.filters  makefile  makefile.kbld  makefile.txt  setup.sh
Code/Rendering/: MarkdownRendering.cpp
Docs/html/: _application_8cpp.html  _application_8h_source.html  _framebuffer_8h_source.html  _include_2_klemm_u_i_2_rendering_2_text_2_text_segment_8h_source.html  _input_8h_source.html  _internal_8cpp.html  _internal_8h.html  _internal_8h_source.html  _markdown_rendering_8h_source.html  _math_helpers_8cpp.html  _math_helpers_8h.html  _math_helpers_8h_source.html  _scroll_object_8h_source.html  _shader_8h_source.html  _source_2_rendering_2_text_2_text_segment_8h_source.html  _string_replace_8cpp.html  _string_replace_8h_source.html  _text_renderer_8h_source.html  _texture_8h_source.html  _timer_8h_source.html  _u_i_background_8h_source.html  _u_i_box_8h_source.html  _u_i_button_8h_source.html  _u_i_dropdown_8h_source.html  _u_i_scroll_box_8h_source.html  _u_i_text_8h_source.html  _u_i_text_field_8h_source.html  _vector2_8cpp.html  _vector2_8h_source.html  _vector3_8cpp.html  _vector3_8h_source.html  _vertex_buffer_8h_source.html  _window_8cpp.html  _window_8h_source.html  annotated.html  class_klemm_u_i_1_1_window-members.html  class_klemm_u_i_1_1_window.html  classes.html  dir_65351cd9ac79b4ab2568c8f8201a5b9b.html  dir_72b6a6d098eab45907b532062360081f.html  (+31 more)
Docs/html/search/: all_0.js  all_2.js  all_3.js  all_5.js  all_7.js  all_9.js  all_a.js  classes_0.js  classes_1.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_1.js  namespaces_0.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
Examples/DynamicMarkup/: CMakeLists.txt  main.cpp
Examples/FileExplorer/: FileExplorer.cpp  FileExplorer.vcxproj  FileExplorer.vcxproj.filters
Examples/HelloWorld/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.vcxproj  main.cpp
Examples/HelloWorld/ui/: HelloWorld.kui
Examples/Translation/: CMakeLists.txt  main.cpp
Examples/Translation/ui/: Translate.kui
Examples/res/dynamic/: DynamicMarkup.kui
Headers/: Application.h
Headers/Math/: MathHelpers.h  Vector2.h
Headers/Rendering/: MarkdownRendering.h  ScrollObject.h  Texture.h
Headers/Rendering/Text/: TextRenderer.h  TextSegment.h
Headers/UI/: UIBackground.h  UIBox.h  UIButton.h  UIScrollBox.h  UIText.h  UITextField.h
Include/KlemmUI/: Application.h  Image.h  Input.cpp  Input.h  OS.h  Resource.h  StringReplace.h  Timer.h  Vector2.h  Vector3.h  Window.h
Include/KlemmUI/Markup/: Markup.h  MarkupElement.h
Include/KlemmUI/Math/: Vector2.h  Vector3.h
Include/KlemmUI/Rendering/: MarkdownRendering.h  ScrollObject.h  Shader.h  ShaderManager.h  Texture.h
Include/KlemmUI/UI/: UIBackground.h  UIBox.h  UIButton.h  UIDropdown.h  UIManager.cpp  UIManager.h  UIScrollBox.h  UIStyle.h  UIText.h  UITextField.h
Include/kui/: App.h  Font.h  Image.h  Input.h  KlemmUI.h  Platform.h  Resource.h  StringReplace.h  Timer.h  UISize.h  Vec2.h  Vec3.h  Window.h  WindowColors.h
Include/kui/Markup/: Markup.h  MarkupBox.h
Include/kui/Rendering/: MarkdownRendering.h  RedrawArea.h  (+5 more)
Markup/: CMakeLists.txt
Markup/MarkupHeaderTool/: CMakeLists.txt  MarkupHeaderTool.vcxproj
Markup/MarkupHeaderTool/Source/: main.cpp
Markup/MarkupHeaderTool/test/: UIBackground.kui.hpp  test.kui.hpp
Markup/MarkupLib/: CMakeLists.txt  MarkupLib.vcxproj  MarkupLib.vcxproj.filters
Resources/shaders/: blursurface.frag  postprocess.frag  postprocess.vert  spinner.frag  text.frag  text.vert  uiblur.frag  uiblur.vert  uishader.frag  uishader.vert
Shaders/: postprocess.frag  text.frag  uishader.frag
Source/: App.cpp  Application.cpp  Font.cpp  Image.cpp  Input.cpp  Internal.cpp  Internal.h  MathHelpers.cpp  MathHelpers.h  OS.cpp  Platform.cpp  Resource.cpp  StringReplace.cpp  Timer.cpp  UISize.cpp  Vec2.cpp  Vec3.cpp  Vector2.cpp  Vector3.cpp  Window.cpp
Source/Internal/: Internal.cpp  Internal.h  MathHelpers.cpp  MathHelpers.h  OpenGL.h
Source/Markup/: Markup.cpp  MarkupBox.cpp  MarkupElement.cpp
Source/Math/: MathHelpers.cpp  Vector2.cpp  Vector3.cpp
Source/Rendering/: Framebuffer.cpp  Framebuffer.h  MarkdownRendering.cpp  OpenGLBackend.cpp  RedrawArea.cpp  ScrollObject.cpp  Shader.cpp  Shader.h  ShaderManager.cpp  Texture.cpp  VertexBuffer.cpp  VertexBuffer.h
Source/SystemWM/: SystemWM.h  SystemWM_Linux.cpp  SystemWM_Linux.h  SystemWM_SDL3.cpp  SystemWM_SDL3.h  SystemWM_Wayland.cpp  SystemWM_Wayland.h  SystemWM_WaylandClipboard.cpp  SystemWM_WaylandClipboard.h  SystemWM_WaylandThreading.cpp  SystemWM_WaylandThreading.h  SystemWM_Web.cpp  SystemWM_Web.h  SystemWM_Win32.cpp  SystemWM_Win32.h  SystemWM_X11.cpp  SystemWM_X11.h
Source/UI/: FileEditorProvider.cpp  TextEditor.cpp  TextEditorHighlight.cpp  UIBackground.cpp  UIBlurBackground.cpp  UIBox.cpp  UIButton.cpp  UICanvasBox.cpp  UIDropdown.cpp  UIManager.cpp  UIScrollBox.cpp  UISpinner.cpp  UIStyle.cpp  UIText.cpp  UITextEditor.cpp  UITextField.cpp
Source/Util/: stb_image.hpp  stb_truetype.hpp
Source/Window/: SystemWM.h  SystemWM_Linux.cpp  SystemWM_Linux.h  SystemWM_Win32.cpp  SystemWM_Win32.h  SystemWM_X11.cpp  SystemWM_X11.h
Util/DynamicMarkup/: CMakeLists.txt
Util/DynamicMarkup/Include/kui/: DynamicMarkup.h
Util/DynamicMarkup/Source/: DynamicMarkup.cpp  MarkupProperties.h  Values.cpp  Values.h
Util/Markup/MarkupLib/: CMakeLists.txt
Util/Markup/MarkupLib/Include/Markup/: Format.h  MarkupParse.h  MarkupStructure.h  MarkupVerify.h  ParseError.h  StringParse.h  WriteCode.h  WriteHeader.h
Util/Markup/MarkupLib/Source/: ElementProperties.cpp  ElementProperties.h  MarkupParse.cpp  MarkupStructure.cpp  MarkupStucture.cpp  MarkupVerify.cpp  ParseError.cpp  StringParse.cpp  WriteCode.cpp  WriteHeader.cpp
Util/Resource/: CMakeLists.txt
Util/WebBuild/: webBuild.ps1
(+40 files in other folders)
